[metadata]
name = viur-core
version = attr: core.version.__version__
author = Mausbrand Informationssysteme GmbH
author_email = devs@viur.dev
description = The core component of ViUR, a development framework for Google App Engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viur-framework/viur-core
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
   viur=.
#include_package_data=True
python_requires = >=3.8

[options.package_data]
* = ./template/*.html, ../requirements.txt
