[metadata]
name = viur-core
version = attr: viur.core.version.__version__
author = Mausbrand Informationssysteme GmbH
author_email = devs@viur.dev
description = The core component of ViUR, a development framework for Google App Engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/viur-framework/viur-core
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
python_requires = >=3.10
package_dir =
    = src

[options.package_data]
viur.core =
    template/*.html
    requirements.txt
